[package]
name = "proxy-relay"
version = "0.1.0"
authors = ["icodesign <github@icodesign.me>"]
edition = "2018"
license-file = "LICENSE"
description = "Helper methods for relaying tokio read/write stream"
homepage = "https://github.com/icodesign/proxy-relay"
repository = "https://github.com/icodesign/proxy-relay"

[features]
dns = ["trust-dns-resolver", "async-trait"]
rust-native-tls = ["tokio-tls", "native-tls", "_tls"]
rustls-tls = ["tokio-rustls", "_tls"]
_tls = ["_pin", "bytes"]
_pin = ["pin-project-lite"]

[dependencies]
async-trait = { version = "0.1", optional = true }
futures = "0.3"
native-tls = { version = "0.2", features = ["vendored"], optional = true }
tokio = { version = "0.2", features = ["rt-core", "io-util", "net"] }
trust-dns-resolver = { version = "0.19", optional = true }
tokio-tls = { version = "0.3", optional = true }
tokio-rustls = { version = "0.15", optional = true }
bytes = { version = "0.5", optional = true }
pin-project-lite = { version = "0.2", optional = true }
