[package]
name = "proxy-relay"
version = "0.1.0"
authors = ["icodesign <github@icodesign.me>"]
edition = "2018"
license-file = "LICENSE"
description = "Helper methods for relaying tokio read/write stream"
homepage = "https://github.com/icodesign/proxy-relay"
repository = "https://github.com/icodesign/proxy-relay"

[dependencies]
async-trait = "0.1"
bytes = "0.5"
futures = "0.3"
tokio = { version = "0.2", features = ["rt-core", "io-util", "net"] }
tls-api = "0.4"
trust-dns-resolver = "0.19"
